# cmake-template

./: .gitignore  CMakeLists.txt
pure_c/: CMakeLists.txt
